reviews section on mobile fixed

--- a/main.scss
+++ b/main.scss
@@ -158,9 +158,8 @@ transform: translate(-50%);
  transform: none;
 
  align-items: center;
- 
- }
 
+ }
 }
 
 /* All them button styles */
@@ -181,9 +180,10 @@ font-size: 24px;
  @include breakpoint($mobile-breakpoint) {
     color: #36769D;
     background-color: transparent;
+    height: 40px;
 
     text-decoration: underline;
-    font-size: 18px;    
+    font-size: 16px;    
  }
 }
 
@@ -209,11 +209,22 @@ font-size: 24px;
 }
 
 #reviews {
- height: 400px;
- background-color: white;
  display: flex;
- justify-content: center;
+ background-color: white;
  align-items: center;
+
+ margin: 100px 0 100px 0;
+ overflow: hidden;
+ justify-content: center;
+
+   @include breakpoint($mobile-breakpoint) {
+   scroll-snap-type: x mandatory;
+   
+   margin: 0 0 40px 0;
+   overflow-x: auto;
+   justify-content: flex-start;
+
+ }
 
 }
 
@@ -221,14 +232,26 @@ font-size: 24px;
     display: flex;
     flex-direction: row;
     padding: 20px;
-    
+
+    @include breakpoint($mobile-breakpoint) {
+    flex: 0 0 100%;
+    min-width: 80%;
+
+ }
+   
 }
 
 .review img {
  border-radius: 50%;
+ margin-right: 20px;
+
  height: 96px;
  width: 96px;
- margin-right: 20px;
+
+ @include breakpoint($mobile-breakpoint) {
+    height: 72px;
+    width: 72px;
+ }
 }
 
 .review q {
@@ -237,15 +260,22 @@ font-size: 24px;
 }
 
 .review p {
-    padding-top: 18px;
+    padding-top: 10px;
     font-size: 18px;
+    
 }
 
  h2 {
     text-align: center;
     margin: 0 20px 80px 20px;
-    font-size: 28px;
+    font-size: 36px;
     @include roboto;
+
+    @include breakpoint($mobile-breakpoint) {
+        margin: 80px 0 40px 0;
+        font-size: 32px;
+    
+ }
 
  }
 
